[gd_scene load_steps=4 format=3 uid="uid://b13kutbtadivj"]

[ext_resource type="Script" path="res://MainScreen.gd" id="1_skgiv"]
[ext_resource type="Texture2D" uid="uid://dte6e2loq5i5x" path="res://Media/Images/recycle.png" id="2_3qlsn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pmc4y"]
bg_color = Color(0.537255, 0.486275, 0.611765, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.282353, 0.258824, 0.321569, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="MainScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_skgiv")
urlToStartRecyling = "res://Application/start_recyling.tscn"
urlToAboutUs = "res://Application/about_us.tscn"
urlToOptions = "res://Application/options.tscn"
urlToHelp = "res://Application/help.tscn"

[node name="Screen" type="Control" parent="."]
anchors_preset = 0
offset_right = 500.0
offset_bottom = 936.0

[node name="Panel" type="Panel" parent="Screen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pmc4y")

[node name="Control" type="Control" parent="Screen/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -115.0
offset_right = 40.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2

[node name="Recycle" type="Sprite2D" parent="Screen/Panel/Control"]
position = Vector2(0, 40)
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_3qlsn")

[node name="VBoxContainer" type="VBoxContainer" parent="Screen/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.336
anchor_top = 0.726
anchor_right = 0.672
anchor_bottom = 0.893
offset_left = -1.52588e-05
offset_top = -99.536
offset_right = -3.05176e-05
offset_bottom = -99.8481
grow_horizontal = 2
grow_vertical = 2

[node name="Start_Recycling" type="Button" parent="Screen/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Start Recyling"

[node name="Options" type="Button" parent="Screen/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Options"

[node name="Help" type="Button" parent="Screen/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Help"

[node name="AboutUs" type="Button" parent="Screen/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "About Us"

[connection signal="pressed" from="Screen/Panel/VBoxContainer/Start_Recycling" to="." method="_on_start_recycling_pressed"]
[connection signal="pressed" from="Screen/Panel/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Screen/Panel/VBoxContainer/Help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="Screen/Panel/VBoxContainer/AboutUs" to="." method="_on_about_us_pressed"]
